Added Javascript onclick

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 		<link rel="stylesheet" type="text/css" href="normalize.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src="new.js"></script>
 </head>
 
 <body>
@@ -11,21 +12,21 @@
 		<h1>tic<br>tac<br>toe</h1>
 	</header>
 	<div id="game">
-		<div class="class1" id="cell1"></div>
-		<div class="class1" id="cell2"></div>
-		<div class="class1" id="cell3"></div>
+		<div class="class1" id="cell1" onclick="playBox(this)"></div>
+		<div class="class1" id="cell2"  onclick="playBox(this)"></div>
+		<div class="class1" id="cell3"  onclick="playBox(this)"></div>
 
 		<br class="clear">
 
-		<div class="class1" id="cell4"></div>
-		<div class="class1" id="cell5"></div>
-		<div class="class1" id="cell6"></div>
+		<div class="class1" id="cell4"  onclick="playBox(this)"></div>
+		<div class="class1" id="cell5"  onclick="playBox(this)"></div>
+		<div class="class1" id="cell6"  onclick="playBox(this)"></div>
 		
 		<br class="clear">
 
-		<div class="class1" id="cell7"></div>
-		<div class="class1" id="cell8"></div>
-		<div class="class1" id="cell9"></div>
+		<div class="class1" id="cell7"  onclick="playBox(this)"></div>
+		<div class="class1" id="cell8"  onclick="playBox(this)"></div>
+		<div class="class1" id="cell9"  onclick="playBox(this)"></div>
 		
 		<br class="clear">
 		<div class="class2">
